Style footer and fix hero section spacing

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ h1 {
 /* Hero text section */
 .hero {
   display: flex;
-  padding: 50px 0;
+  padding: 100px 0;
 
   background-color: #1f2937;
 }
@@ -49,12 +49,15 @@ h1 {
 }
 
 .hero-text h2 {
+  margin: 0px;
   font-size: 48px;
   color: #f9faf8;
   font-weight: 900;
 }
 
 .hero-text p {
+  margin-top: 6px;
+  margin-bottom: 10px;
   font-size: 18px;
   color: #e5e7eb;
 }
@@ -182,10 +185,13 @@ figure {
 
 /* Footer Section */
 footer {
-  background-color: lavender;
+  background-color: #1f2937;
   text-align: center;
+  padding: 45px 100px;
 }
 
 footer p {
   margin: 0;
+  font-size: 18px;
+  color: #e5e7eb;
 }
